# snax

./: .gitignore  CMakeLists.txt  LICENSE  README.md  snax_demo.ipynb
code/: fluence_calc_mc.py  physics.py  stats.py  utils.py
code/cpp/: CMakeLists.txt  alp_decays.cpp  alp_decays.hpp  alp_spectrum.cpp  alp_spectrum.hpp  physics.hpp  python_wrapper.cpp  python_wrapper.hpp
code/cpp/include/: python_wrapper.hpp
code/cpp/src/: alp_spectrum.cpp  physics.cpp  python_wrapper.cpp
code/python/: __init__.py  alp_conversion.py  alp_decay.py  physics.py  stats.py  utils.py
code/python/mpi_scripts/: mpi_sn1987a_alp_conversions.py  mpi_sn1987a_alp_decays.py  mpi_sn1987a_alp_decays_mc.py  sn1987a_alp_decays_example.py  sn1987a_alp_decays_mc_vegas_mpi.py
examples/: run_mc_sims_mpi.py  sn1987a_alp_conversions_mpi.py  sn1987a_alp_decays_mc_mpi.py  sn1987a_alp_decays_mpi.py
scripts/: sn1987a_alp_conversions_mpi.py  sn1987a_alp_decays_mc_mpi.py  sn1987a_alp_decays_mpi.py
